# pyLoDStorage

./: .gitignore  .project  .readthedocs.yml  .travis.yml  404.html  AGENTS.md  CITATION.cff  README.md  index.html  mkdocs.yml  objects.inv  pyproject.toml  requirements.txt  setup.py
.github/workflows/: build.yml
docs/: index.md
docs/source/: conf.py  index.rst  lodstorage.rst  sampledata.rst  tests.rst
docs/source/_build/doctrees/: environment.pickle  index.doctree  lodstorage.doctree  sampledata.doctree  setup.doctree  tests.doctree
docs/source/_build/html/: .buildinfo  genindex.html  index.html  lodstorage.html  objects.inv  py-modindex.html  sampledata.html  search.html  searchindex.js  setup.html  tests.html
docs/source/_build/html/_modules/: index.html
docs/source/_build/html/_modules/lodstorage/: csv.html  docstring_parser.html  entity.html  jsonable.html  jsonpicklemixin.html  linkml.html  lod.html  mwTable.html  plot.html  query.html  querymain.html  sample.html  schema.html  sparql.html  sql.html  storageconfig.html  tabulateCounter.html  types.html  uml.html  yamlable.html  yamlablemixin.html
docs/source/_build/html/_modules/tests/: basetest.html  testEntityManager.html  testJson.html  testPandas.html  testSPARQL.html  testSqlite3.html  testTrulyTabular.html  test_Plot.html  test_Tabulate.html  test_csv.html  test_lod.html  test_queries.html
docs/source/_build/html/_sources/: index.rst.txt  lodstorage.rst.txt  tests.rst.txt
lodstorage/: __init__.py  cache.py  csv.py  docstring_parser.py  duckdb_query.py  entity.py  exception_handler.py  jsonable.py  jsonpicklemixin.py  linkml.py  linkml_gen.py  lod.py  lod_csv.py  multilang_querymanager.py  mwTable.py  mysql.py  npq_endpoint.py  params.py  persistent_log.py  plot.py  postgresql.py  prefix_config.py  prefixes.py  query.py  query_cmd.py  querymain.py  rate_limiter.py  rdf.py  rdf_format.py  sample.py  sample2.py  schema.py  sparql.py  sql.py  sql_backend.py  sql_cache.py  sqlite_api.py  storageconfig.py  sync.py  tabulateCounter.py  (+8 more)
sampledata/: dblp.yaml  endpoints.yaml  endpoints_qlever.yaml  formats.yaml  got.yaml  prefixes.yaml  queries.yaml  royals.yaml  royals_linkml_schema.yaml  scholia.yaml  trulytabular.yaml  wf.yaml  wikidata.yaml
sampledata/queries/: queries_olympics.yaml  queries_tiny_wikidatasubsets_claude4_5.yaml  queries_tiny_wikidatasubsets_gemini3pro.yaml  queries_tiny_wikidatasubsets_gpt5.yaml  queries_tiny_wikidatasubsets_grok4.yaml
scripts/: blackisort  doc  install  installAndTest  jena  sparqlquery  test  vsenv
search/: search_index.json
source/_build/doctrees/: environment.pickle  index.doctree
source/_build/html/: genindex.html  index.html  sampledata.html  setup.html  tests.html
source/_build/html/_modules/: index.html
source/_build/html/_modules/lodstorage/: csv.html  jsonpicklemixin.html  linkml_gen.html  mwTable.html  plot.html  query.html  rdf.html  sample2.html  sparql.html  storageconfig.html  sync.html  tabulateCounter.html  trulytabular.html  version.html  xml.html
source/_build/html/_sources/: index.rst.txt
storage/: sql.py  uml.py
tests/: action_stats.py  basetest.py  endpoint_test.py  testEntityManager.py  testJson.py  testPandas.py  testSPARQL.py  testSqlite3.py  testTrulyTabular.py  test_Plot.py  test_Tabulate.py  test_cache.py  test_csv.py  test_docstring_parser.py  test_linkml.py  test_linkml_schema.py  test_lod.py  test_multilang_querymanager.py  test_npq_endpoint.py  test_owl2ready.py  test_params.py  test_persistent_log.py  test_postgresql.py  test_prefix_config.py  test_prefixes.py  test_queries.py  test_query_yaml.py  test_rdf.py  test_samples.py  test_sparql_ratelimit.py  test_sql_backend.py  test_sql_cache.py  test_sqlite3.py  test_sync.py  test_tabulate.py  test_yaml_path.py  test_yamlable.py
